Update location of prairielearn.conf

--- a/prairielearn.conf
+++ b/prairielearn.conf
@@ -1,3 +1,5 @@
+# This file is located ./httpd/conf.d/prairielearn.conf
+
 <VirtualHost *:80>
   ServerName prairielearn.ok.ubc.ca
 	# Redirect after working SSL is available
